--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,38 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
+    "import os\n",
     "from dataclasses import dataclass\n",
     "from importlib import import_module\n",
     "from pathlib import Path\n",
     "from typing import Any, Dict, List\n",
     "\n",
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
     "from sciflow.params import params_as_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -139,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "\n",
     "supported_parameters = (str, int, float)\n",
     "supported_args = (Dict, List)\n",
@@ -156,14 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
+    "\n",
     "\n",
     "@dataclass\n",
-    "class Param:\n",
+    "class ParamMeta:\n",
     "    instance_type: type\n",
     "    is_scalar: bool\n",
     "    has_metaflow_param: bool\n",
@@ -173,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "\n",
     "\n",
     "def load_module(fully_qualified_module_name):\n",
@@ -189,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "\n",
     "\n",
     "def extract_param_meta(module_name: str, params: Dict[str, Any]):\n",
@@ -217,7 +208,7 @@
     "\n",
     "    for key, val in param_vals.items():\n",
     "        if any([isinstance(val, t) for t in supported_parameters]):\n",
-    "            param_meta[key] = Param(\n",
+    "            param_meta[key] = ParamMeta(\n",
     "                instance_type=type(val),\n",
     "                is_scalar=True,\n",
     "                has_metaflow_param=True,\n",
@@ -225,7 +216,7 @@
     "                persist_type=\"pickle\",\n",
     "            )\n",
     "        elif any([isinstance(val, t) for t in supported_args]):\n",
-    "            param_meta[key] = Param(\n",
+    "            param_meta[key] = ParamMeta(\n",
     "                instance_type=type(val),\n",
     "                is_scalar=False,\n",
     "                has_metaflow_param=True,\n",
@@ -234,7 +225,7 @@
     "            )\n",
     "        elif any([isinstance(val, t) for t in supported_conversion_args]):\n",
     "            if isinstance(val, np.ndarray):\n",
-    "                param_meta[key] = Param(\n",
+    "                param_meta[key] = ParamMeta(\n",
     "                    instance_type=type(val),\n",
     "                    is_scalar=False,\n",
     "                    has_metaflow_param=False,\n",
@@ -242,21 +233,35 @@
     "                    persist_type=\"numpy\",\n",
     "                )\n",
     "            elif isinstance(val, pd.Series) or isinstance(val, pd.DataFrame):\n",
-    "                param_meta[key] = Param(\n",
+    "                param_meta[key] = ParamMeta(\n",
     "                    instance_type=type(val),\n",
     "                    is_scalar=False,\n",
     "                    has_metaflow_param=False,\n",
     "                    is_json_type=False,\n",
     "                    persist_type=\"pandas\",\n",
     "                )\n",
+    "            elif isinstance(val, Path):\n",
+    "                param_meta[key] = ParamMeta(\n",
+    "                    instance_type=type(val),\n",
+    "                    is_scalar=False,\n",
+    "                    has_metaflow_param=False,\n",
+    "                    is_json_type=False,\n",
+    "                    persist_type=\"pickle\",\n",
+    "                )\n",
     "        else:\n",
-    "            print(f\"Skipping unsupported param type, for: {key} - {type(val)}\")\n",
+    "            param_meta[key] = ParamMeta(\n",
+    "                instance_type=type(val),\n",
+    "                is_scalar=False,\n",
+    "                has_metaflow_param=True,\n",
+    "                is_json_type=False,\n",
+    "                persist_type=\"unsupported\",\n",
+    "            )\n",
     "    return param_meta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,31 +271,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'int_param': Param(instance_type=<class 'int'>, is_scalar=True, has_metaflow_param=True, is_json_type=False, persist_type='pickle'),\n",
-       " 'float_param': Param(instance_type=<class 'float'>, is_scalar=True, has_metaflow_param=True, is_json_type=False, persist_type='pickle'),\n",
-       " 'str_param': Param(instance_type=<class 'str'>, is_scalar=True, has_metaflow_param=True, is_json_type=False, persist_type='pickle'),\n",
-       " 'dict_param': Param(instance_type=<class 'dict'>, is_scalar=False, has_metaflow_param=True, is_json_type=True, persist_type='pickle'),\n",
-       " 'list_param': Param(instance_type=<class 'list'>, is_scalar=False, has_metaflow_param=True, is_json_type=True, persist_type='pickle'),\n",
-       " 'ones': Param(instance_type=<class 'numpy.ndarray'>, is_scalar=False, has_metaflow_param=False, is_json_type=False, persist_type='numpy'),\n",
-       " 'text': Param(instance_type=<class 'numpy.ndarray'>, is_scalar=False, has_metaflow_param=False, is_json_type=False, persist_type='numpy'),\n",
-       " 'series_param': Param(instance_type=<class 'pandas.core.series.Series'>, is_scalar=False, has_metaflow_param=False, is_json_type=False, persist_type='pandas'),\n",
-       " 'df_param': Param(instance_type=<class 'pandas.core.frame.DataFrame'>, is_scalar=False, has_metaflow_param=False, is_json_type=False, persist_type='pandas')}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "extract_param_meta(\"sciflow.test.test_data_handling\", params)"
+    "param_meta = extract_param_meta(\"sciflow.test.test_data_handling\", params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import PosixPath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert all(\n",
+    "    [\n",
+    "        param_meta[\"int_param\"].instance_type == int,\n",
+    "        param_meta[\"float_param\"].instance_type == float,\n",
+    "        param_meta[\"str_param\"].instance_type == str,\n",
+    "        param_meta[\"input_path\"].instance_type == PosixPath,\n",
+    "        param_meta[\"model_path\"].instance_type == PosixPath,\n",
+    "        param_meta[\"dict_param\"].instance_type == dict,\n",
+    "        param_meta[\"list_param\"].instance_type == list,\n",
+    "        param_meta[\"series_param\"].instance_type == pd.Series,\n",
+    "        param_meta[\"df_param\"].instance_type == pd.DataFrame,\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
