--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,9 @@
     "\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
+    "from sciflow.data_handler import extract_param_meta\n",
     "from sciflow.params import params_as_dict\n",
-    "from sciflow.parse_module import FuncDetails, extract_steps\n",
-    "from sciflow.data_handler import extract_param_meta"
+    "from sciflow.parse_module import FuncDetails, extract_steps"
    ]
   },
   {
@@ -46,18 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,40 +281,49 @@
     "            mf_params_import += \", Parameter\"\n",
     "        if has_json_param:\n",
     "            mf_params_import += \", JSONType\"\n",
-    "            flow_file.write('import json\\n')\n",
-    "        flow_file.write(mf_params_import + '\\n')\n",
-    "        flow_file.write(\n",
-    "            f\"from {fq_module_name} import {', '.join(orig_step_names)}\\n\"\n",
-    "        )\n",
-    "        flow_file.write(\n",
-    "            f\"from {fq_module_name} import {', '.join(params.keys())}\\n\"\n",
-    "        )\n",
+    "            flow_file.write(\"import json\\n\")\n",
+    "        flow_file.write(mf_params_import + \"\\n\")\n",
+    "        flow_file.write(f\"from {fq_module_name} import {', '.join(orig_step_names)}\\n\")\n",
+    "        flow_file.write(f\"from {fq_module_name} import {', '.join(params.keys())}\\n\")\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
     "        single_indent = \"    \"\n",
-    "        for param in param_meta.keys():\n",
-    "            if param_meta[param].is_scalar:\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{param} = Parameter('{param}', default={param})\\n\"\n",
-    "                )\n",
-    "            elif param_meta[param].is_json_type:\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\n",
-    "                )\n",
-    "            elif param_meta[param].instance_type == PosixPath:\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{param} = Parameter('{param}', default=str({param}), type=JSONType)\\n\"\n",
-    "                )\n",
+    "        write_params(flow_file, param_meta, single_indent)\n",
     "\n",
     "        flow_file.write(\"\\n\")\n",
-    "        write_steps(flow_file, steps, orig_step_names, single_indent)\n",
-    "    \n",
+    "        write_steps(flow_file, steps, orig_step_names, param_meta, single_indent)\n",
+    "\n",
     "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
     "        flow_file.write(f\"{single_indent}{flow_class_name}()\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  export\n",
+    "\n",
+    "\n",
+    "def write_params(flow_file, param_meta, single_indent):\n",
+    "    for param in param_meta.keys():\n",
+    "        if param_meta[param].is_scalar:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{param} = Parameter('{param}', default={param})\\n\"\n",
+    "            )\n",
+    "        elif param_meta[param].is_json_type:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\n",
+    "            )\n",
+    "        elif param_meta[param].instance_type == PosixPath:\n",
+    "            flow_file.write(\n",
+    "                f\"{single_indent}{param} = Parameter('{param}', default=str({param}))\\n\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,24 +334,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(any((p.has_metaflow_param for p in param_meta.values())))\n",
-    "assert(any((p.is_json_type for p in param_meta.values())))"
+    "assert any((p.has_metaflow_param for p in param_meta.values()))\n",
+    "assert any((p.is_json_type for p in param_meta.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def write_steps(flow_file, steps, orig_step_names, single_indent):\n",
+    "def format_arg(arg, param_meta):\n",
+    "    result = arg\n",
+    "    if arg in param_meta and param_meta[arg].has_metaflow_param:\n",
+    "        result = \"self.\" + arg\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def write_steps(flow_file, steps, orig_step_names, param_meta, single_indent):\n",
     "    for i, step in enumerate(steps):\n",
     "        flow_file.write(f\"{single_indent}@step\\n\")\n",
     "        flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
@@ -362,7 +369,7 @@
     "            flow_step_args = \"\"\n",
     "            if len(step.args) > 0:\n",
     "                flow_step_args = \", \".join(\n",
-    "                    [\"self.\" + a for a in step.args.split(\",\")]\n",
+    "                    [format_arg(a, param_meta) for a in step.args.split(\",\")]\n",
     "                )\n",
     "            flow_file.write(\n",
     "                f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
@@ -378,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,40 +400,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "flow_path = Path(\n",
-    "    os.path.join(Path(\".\").resolve(), \"test\", \"flows\", f\"{get_module_name(nb_path).split('.')[-1]}.py\")\n",
+    "    os.path.join(\n",
+    "        Path(\".\").resolve(),\n",
+    "        \"test\",\n",
+    "        \"flows\",\n",
+    "        f\"{get_module_name(nb_path).split('.')[-1]}.py\",\n",
+    "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(Path('/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py') == flow_path)"
+    "assert (\n",
+    "    Path(\"/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py\") == flow_path\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Param' object has no attribute 'instance_type'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-179-1f53024e31a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnb_to_metaflow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnb_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflow_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msilent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-168-11fbe205db3b>\u001b[0m in \u001b[0;36mnb_to_metaflow\u001b[0;34m(nb_path, flow_path, silent)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0morig_step_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0msteps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     )\n\u001b[1;32m     36\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msilent\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-172-bb72045952e1>\u001b[0m in \u001b[0;36mwrite_module_to_file\u001b[0;34m(flow_path, flow_class_name, lib_name, module_name, orig_step_names, steps, params)\u001b[0m\n\u001b[1;32m     43\u001b[0m                     \u001b[0;34mf\"{single_indent}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                 )\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0;32melif\u001b[0m \u001b[0mparam_meta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstance_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mPosixPath\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m                 flow_file.write(\n\u001b[1;32m     47\u001b[0m                     \u001b[0;34mf\"{single_indent}{param} = Parameter('{param}', default=str({param}), type=JSONType)\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Param' object has no attribute 'instance_type'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
      ]
     }
    ],
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,27 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:gensim.summarization.textcleaner:'pattern' package found; tag filters are available for English\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
       "Converted test_top2vec.ipynb to TestTop2VecFlow in: test_top2vec.py\n",
       "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
       "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
@@ -504,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -574,23 +576,7 @@
      "output_type": "stream",
      "text": [
       "Flow: test_module.py verified\n",
-      "Flow: test.test_export.py verified\n",
-      "Flow: test_data_handling.py verification failed\n",
-      "Details:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py\", line 35, in <module>\n",
-      "    TestDataHandlingFlow()\n",
-      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/flowspec.py\", line 77, in __init__\n",
-      "    from . import cli\n",
-      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/cli.py\", line 467, in <module>\n",
-      "    def init(obj, run_id=None, task_id=None, tags=None, **kwargs):\n",
-      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/metaflow/parameters.py\", line 232, in wrapper\n",
-      "    cmd.params.insert(0, click.Option(('--' + arg.name,), **kwargs))\n",
-      "  File \"/home/jovyan/envs/discovery/lib/python3.7/site-packages/click/core.py\", line 1736, in __init__\n",
-      "    flag_value = not self.default\n",
-      "ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n",
-      "Flow: test_top2vec.py verified\n",
-      "Flow: test_export.py verified\n"
+      "Flow: test_data_handling.py verified\n"
      ]
     }
    ],
@@ -600,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
