--- a/nbs/test/test_data_handling.ipynb
+++ b/nbs/test/test_data_handling.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "parameters"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,15 +60,15 @@
     "\n",
     "\n",
     "def scalar(int_param: int, float_param: float, str_param: str):\n",
-    "    print(f'int_param: {int_param}')\n",
-    "    print(f'float_param: {float_param}')\n",
-    "    print(f'str_param: {str_param}')\n",
+    "    print(f\"int_param: {int_param}\")\n",
+    "    print(f\"float_param: {float_param}\")\n",
+    "    print(f\"str_param: {str_param}\")\n",
     "    return int_param, float_param, str_param"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "(3, 1.1, 'Sciflow 🔬')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +105,14 @@
     "\n",
     "\n",
     "def py_advanced(input_path: Path, list_param: List[int], dict_param: Dict[str, Any]):\n",
-    "    print(f'input_path: {input_path}')\n",
-    "    print(f'input_path: {list_param[:10]}')\n",
-    "    print(f'input_path: {dict_param}')"
+    "    print(f\"input_path: {input_path}\")\n",
+    "    print(f\"input_path: {list_param[:10]}\")\n",
+    "    print(f\"input_path: {dict_param}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,21 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exportn_step:pandas\n",
     "\n",
     "\n",
-    "def pandas(series: pd.Series, df: pd.DataFrame):\n",
-    "    print(f'series: {series.shape}')\n",
-    "    print(f'df: {df.shape}')"
+    "def pandas(series_param: pd.Series, df_param: pd.DataFrame):\n",
+    "    print(f\"series: {series_param.shape}\")\n",
+    "    print(f\"df: {df_param.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -160,13 +160,6 @@
    "source": [
     "pandas(series_param, df_param)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
