--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -137,6 +137,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_env_file(sciflow_dir: Path = None):\n",
+    "    if sciflow_dir is None:\n",
+    "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
+    "    env_path = Path(sciflow_dir, 'env').resolve()\n",
+    "    with open(env_path, 'r') as env_file:\n",
+    "        lines = env_file.readlines()\n",
+    "    return lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples_root = Path('../examples')\n",
+    "project_root = Path('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_lines_wout_ppath = [\"export USER='sciflow'\\n\",\n",
+    " 'export ODBC_DRIVER=/opt/odbc/xyz.so\\n',\n",
+    " 'export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n']\n",
+    "\n",
+    "env_lines_w_1_ppath = [\"export USER='sciflow'\\n\",\n",
+    " f'export PYTHONPATH=$PYTHONPATH:{str(project_root.resolve())}\\n', \n",
+    " 'export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n']\n",
+    "\n",
+    "env_lines_w_2_ppath = [\"export USER='sciflow'\\n\",\n",
+    " f'export PYTHONPATH=$PYTHONPATH:{str(project_root.resolve())}:{str(examples_root.resolve())}\\n', \n",
+    " 'export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def edit_pythonpath(env_lines, dir_to_add: Path):\n",
+    "    dir_str = str(dir_to_add.resolve())\n",
+    "    existing_ppath = [p for p in env_lines if p.find('PYTHONPATH') > -1]\n",
+    "    \n",
+    "    if len(existing_ppath) == 0:\n",
+    "        new_line = f\"export PYTHONPATH=$PYTHONPATH:{dir_str}\\n\"\n",
+    "        env_lines.append(new_line)\n",
+    "        new_text = ''.join(env_lines)\n",
+    "    elif len(existing_ppath) == 1:\n",
+    "        prev_line = existing_ppath[0]\n",
+    "        if prev_line.find(dir_str) == -1:\n",
+    "            new_line = existing_ppath[0].replace('$PYTHONPATH:', f'$PYTHONPATH:{dir_str}')\n",
+    "            new_text = ''.join(env_lines).replace(prev_line, new_line)\n",
+    "        else:\n",
+    "            new_text = ''.join(env_lines)\n",
+    "    else:\n",
+    "        raise ValueError(\"Env file is malformed - only 1 PYTHONPATH entry should be present\")\n",
+    "    return new_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_edited_pythonpath(project_root: Path, sciflow_dir: Path = None):\n",
+    "    if sciflow_dir is None:\n",
+    "        sciflow_dir = Path('~/.sciflow').expanduser()\n",
+    "    env_path = Path(sciflow_dir, 'env').resolve()\n",
+    "    env_lines = read_env_file(sciflow_dir)\n",
+    "    new_text = edit_pythonpath(env_lines, dir_to_add)\n",
+    "    with open(env_path, 'w') as env_file:\n",
+    "            env_file.write(new_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"export USER='Donal Simmie'\\nexport ODBC_DRIVER=/opt/dremio-odbc/lib64/libdrillodbc_sb64.so\\nexport ODBC_USER=E02079\\nexport ODBC_PWD=hNKRMoSiRmOmsjoGJe9FG0ZMIrjFBhSEZK375M2xZRmmOWMdCHoGdb9vyj5+ww==\\nexport ODBC_PORT=31010\\nexport ODBC_HOST=dremio-preprod.newday.co.uk\\nexport SSL_CERTS=/etc/ssl/certs/ca-certificates.crt\\nexport SCIFLOW_BUCKET=pprsandboxpdlras3\\nexport SCIFLOW_BUCKET_TABLE_ALIAS=ra_s3\\nexport PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples\\n\""
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_lines = read_env_file(sciflow_dir)\n",
+    "edit_pythonpath(env_lines, examples_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"export USER='Donal Simmie'\\nexport ODBC_DRIVER=/opt/dremio-odbc/lib64/libdrillodbc_sb64.so\\nexport ODBC_USER=E02079\\nexport ODBC_PWD=hNKRMoSiRmOmsjoGJe9FG0ZMIrjFBhSEZK375M2xZRmmOWMdCHoGdb9vyj5+ww==\\nexport ODBC_PORT=31010\\nexport ODBC_HOST=dremio-preprod.newday.co.uk\\nexport SSL_CERTS=/etc/ssl/certs/ca-certificates.crt\\nexport SCIFLOW_BUCKET=pprsandboxpdlras3\\nexport SCIFLOW_BUCKET_TABLE_ALIAS=ra_s3\\n\""
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "''.join(env_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'export PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples\\n'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edit_pythonpath(env_lines_wout_ppath, examples_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'export PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples/home/sagemaker-user/git/sciflow\\n'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edit_pythonpath(env_lines_w_1_ppath, examples_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'export PYTHONPATH=$PYTHONPATH:/home/sagemaker-user/git/sciflow/examples/home/sagemaker-user/git/sciflow:/home/sagemaker-user/git/sciflow/examples\\n'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edit_pythonpath(env_lines_w_2_ppath, examples_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -148,13 +342,13 @@
     "def sciflow_init(project_root: Param(\"The root directory of the project\", Path) = None):\n",
     "    if project_root is None:\n",
     "        project_root = Path('.').resolve()\n",
-    "    # Add project_root to PYTHONPATH\n",
-    "    sys.path.append(str(project_root.resolve()))\n",
-    "    \n",
     "    # TODO - Get latest templates files from web - if has internet connection\n",
     "    \n",
     "    # Create sciflow env file if it doesn't exist\n",
-    "    write_env_file()"
+    "    write_env_file()\n",
+    "    \n",
+    "    # Add project root to PYTHONPATH environment variable\n",
+    "    "
    ]
   },
   {
@@ -171,7 +365,7 @@
     }
    ],
    "source": [
-    "sciflow_init(Path('../examples'))"
+    "sciflow_init(project_root)"
    ]
   },
   {
